sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: type mismatch;
 found   : Unit
 required: Boolean
		if(pos=0)
                      ^